@@ -1,5 +1,13 @@
 2006-08-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/thbrk/thbrk.c (th_brk): Tokenized mixed Thai-English text and
+	called brk_do() chunk by chunk.
+
+	* src/thbrk/thbrk.c (brk_do, brk_recover): Accepted string and length
+	rather than null-terminated string, to support chunk-wise breaking.
+
+2006-08-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/thbrk/thbrk.c (brk_pool_delete): Adjusted code, for tiny
 	performance improvement, esp. when deleting first node.
 
@@ -989,13 +997,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.6 2006-08-26 11:15:03 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.7 2006-08-26 14:55:50 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.6 2006-08-26 11:15:03 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.7 2006-08-26 14:55:50 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
